package sci.travel_app.WalkTheBear.controller;

public class PlaceController {
}
